# agent-store

./: .facts  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  concurrency.facts  flake.nix  install.sh  json-hooks.facts  mkdocs.yml  skills-lock.json
.agents/skills/agent-store/: SKILL.md
.agents/skills/agent-store-patterns/: SKILL.md
.agents/skills/agent-store-pipelines/: SKILL.md
.agents/skills/agent-store/references/: commands.md
.agents/skills/dark-factory/: SKILL.md
.agents/skills/dark-factory/subroutines/: bugbash.md  facts-refine.md  integration-testing.md  static-review.md
.agents/skills/facts/: SKILL.md
.agents/skills/facts-discover/: SKILL.md
.agents/skills/facts-implement/: SKILL.md
.agents/skills/facts-refine/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
assets/: demo.sh
completions/: _agent-store  agent-store.bash  agent-store.fish
docs/: claude-code.md  concepts.md  faq.md  hooks.md  json.md  queries.md  schedules.md  skills.md
examples/: README.md  decision-log.sh  hooks-audit.sh  jsonl-pipeline.sh  memory-graph.sh  session-handoff.sh  task-tracker.sh
man/: agent-store.1
skills/agent-store/: SKILL.md
skills/agent-store-patterns/: SKILL.md
skills/agent-store-pipelines/: SKILL.md
skills/agent-store/references/: commands.md
skills/core/: SKILL.md
skills/core/references/: commands.md
src/: cli.rs  lib.rs  main.rs  output.rs  query.rs  store.rs  value.rs
tests/: hook_guard.rs  hook_stress.rs  integration_top5.sh  persistence_interface.rs
tests/docker/: Dockerfile  schedule_tests.sh
tests/facts/: cli_context.sh  cli_help.sh  cli_hooks.sh  cli_links.sh  cli_records.sh  cli_schedules.sh  store_events.sh  store_schema_migrations.sh
~/agent-store-tilde-test/: store.db
