[package]
name = "agent-store"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.23.3", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
