[package]
name = "agent-store-cli"
version = "0.1.1"
edition = "2021"
description = "A local-first memory and context store for AI coding agents, backed by SQLite"
license = "MIT"
repository = "https://github.com/av/agent-store"
homepage = "https://github.com/av/agent-store"
documentation = "https://github.com/av/agent-store#readme"
readme = "README.md"
keywords = ["llm", "agent", "memory", "context", "sqlite"]
categories = ["command-line-utilities", "database"]
exclude = [".agents/", ".claude/", "AGENTS.md", ".github/", "CONTRIBUTING.md", "SECURITY.md", "flake.nix", "flake.lock"]

# cargo-binstall: fetch prebuilt release binaries instead of compiling.
# Matches the release asset naming, e.g.
# agent-store-v0.1.1-x86_64-unknown-linux-gnu.tar.gz
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/agent-store-v{ version }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

# The crate is published as agent-store-cli (the bare name is taken on
# crates.io by an unrelated project), but the binary and library keep the
# agent-store name.
[lib]
name = "agent_store"
path = "src/lib.rs"

[[bin]]
name = "agent-store"
path = "src/main.rs"

[dependencies]
libc = "0.2"
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde_json = "1.0.140"
